# poam-generator

./: .gitignore  README.md  _capture_demo.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: README.md  poam-scan.yml
.streamlit/: config.toml
examples/: sample_findings.json
src/poam_generator/: __init__.py  aws_sync.py  cli.py  dashboard.py  demo_data.py  generate.py  models.py  oscal.py  tracker.py  validate.py
